--- a/public/style.css
+++ b/public/style.css
@@ -1,15 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Bebas+Neue|Montserrat|Pacifico&display=swap');
 
-span.line {
-  display: inline-block;
-}
 
 button {
     color: white;
     background-color: #3d3d3d;
     border-radius:1em;
     border: none;
-
 }
 
 
@@ -17,6 +13,7 @@ body {
   background-color: #BEA1E0;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   text-align: center;
+  padding-bottom: 1em;
 }
 
 
@@ -47,6 +44,7 @@ h2 {
 
 .newTask {
   padding: 0.4em;
+  margin-bottom: 1em;
 }
 
 
@@ -79,6 +77,7 @@ h2 {
 
 .completedTasks {
   text-align: center;
+  margin-top: 1.4em;
 }
 
 .gridContainerCompleted {
