--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,8 @@ button {
     border-radius:1em;
     border: none;
     margin: 0em 0.4em 0em 0.4em;
+    font-weight: bold;
+
 }
 
 .button:hover {
